--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -108,6 +108,7 @@ $item-thumbnail-size: 90px
   justify-content: center
   max-width: $item-thumbnail-size
   min-width: $item-thumbnail-size
+  min-height: 70px
   overflow: hidden
   position: relative
 
